--- a/app/views/api/v1/statistics/index.html.erb
+++ b/app/views/api/v1/statistics/index.html.erb
@@ -1,6 +1,19 @@
-<%= simple_form_for :user, url: api_v1_dashboard_path, html: { class: 'form-inline' }, remote: true do |f| %>
+<%= simple_form_for :user, url: api_v1_dashboard_path, remote: true,
+  wrapper_mappings: {
+    boolean:       :custom_boolean,
+    check_boxes:   :custom_collection,
+    date:          :custom_multi_select,
+    datetime:      :custom_multi_select,
+    file:          :custom_file,
+    radio_buttons: :custom_collection,
+    range:         :custom_range,
+    time:          :custom_multi_select,
+    select:        :custom_multi_select
+  } do |f| %>
   <%= f.input :username %>
   <%= f.input :password %>
+  <%= f.input :birthday %>
+  <%= f.input :date, collection: 2005..2019, prompt: :translate, label: 'Date', required: false %>
   <%= f.button :submit %>
 <% end %>
 
