--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,1 +1,18 @@
  @import "bootstrap";
+
+.form-container {
+  width: 500px;
+  padding: 10px;
+  margin-bottom: 20px;
+
+  & > form {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+
+    & > input {
+      margin-bottom: -7px !important;
+    }
+  }
+}
