--- a/app/views/api/v1/statistics/index.html.erb
+++ b/app/views/api/v1/statistics/index.html.erb
@@ -1,21 +1,16 @@
-<%= simple_form_for :user, url: api_v1_dashboard_path, remote: true,
-  wrapper_mappings: {
-    boolean:       :custom_boolean,
-    check_boxes:   :custom_collection,
-    date:          :custom_multi_select,
-    datetime:      :custom_multi_select,
-    file:          :custom_file,
-    radio_buttons: :custom_collection,
-    range:         :custom_range,
-    time:          :custom_multi_select,
-    select:        :custom_multi_select
-  } do |f| %>
-  <%= f.input :username %>
-  <%= f.input :password %>
-  <%= f.input :birthday %>
-  <%= f.input :date, collection: 2005..2019, prompt: :translate, label: 'Date', required: false %>
-  <%= f.button :submit %>
-<% end %>
+<div class='form-container'>
+  <%= simple_form_for :user, url: api_v1_dashboard_path, remote: true do |f| %>
 
+    <% events = [['Dep delay', 'DepDelay'], ['Day of week', 'DayOfWeek'], ['Origin City Name', 'OriginCityName']] %>
+
+    <%= f.input :event_name, label: 'Event name:', collection: events, required: false, input_html: { class: "mb-2 mr-sm-2" } %>
+
+    <%= f.input :date_from, label: 'Date from:', collection: 2005..2019, required: false, input_html: { class: "mb-2 mr-sm-2" } %>
+
+    <%= f.input :date_to, label: 'Date to:', collection: 2005..2019, required: false, input_html: { class: "mb-2 mr-sm-2" } %>
+
+    <%= f.button :submit, 'Make a report', class: "btn-primary mb-2" %>
+  <% end %>
+</div>
 <div id="chart">
 </div>
