--- a/app/views/api/v1/statistics/_pie_chart.html.erb
+++ b/app/views/api/v1/statistics/_pie_chart.html.erb
@@ -2,35 +2,31 @@
 
 <script>
   var ctx = document.getElementById('pieChart').getContext('2d');
+  var labels = <%=raw @labels %>
+  var values = <%=raw @values %>
   ctx.height = 600;
   var data = {
-    labels: [
-        "Saudi Arabia",
-        "Russia",
-        "Iraq",
-        "United Arab Emirates",
-        "Canada"
-    ],
+    labels: labels,
     datasets: [
-        {
-            data: [133.3, 86.2, 52.2, 51.2, 50.2],
-            backgroundColor: [
-                "#FF6384",
-                "#63FF84",
-                "#84FF63",
-                "#8463FF",
-                "#6384FF"
-            ]
-        }]
+      {
+        data: values,
+        backgroundColor: [
+          'rgba(255, 99, 132, 1)',
+          'rgba(54, 162, 235, 1)',
+          'rgba(255, 206, 86, 1)',
+          'rgba(75, 192, 192, 1)',
+          'rgba(153, 102, 255, 1)',
+          'rgba(255, 159, 64, 1)',
+        ],
+      }
+    ]
   };
-  var options = ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday']
   var myPieChart = new Chart(ctx, {
-      type: 'pie',
-      data: data,
-      //options: options
-      options: {
-        maintainAspectRatio: false,
-        responsive: true,
+    type: 'pie',
+    data: data,
+    options: {
+      maintainAspectRatio: false,
+      responsive: true,
     }
   });
 </script>
