--- a/app/views/api/v1/statistics/dashboard.js.erb
+++ b/app/views/api/v1/statistics/dashboard.js.erb
@@ -1,3 +1,3 @@
 $("#chart").html(
-  "<%= escape_javascript(render('api/v1/statistics/chart', locals: { response: @response })) %>"
+  "<%= escape_javascript(render('api/v1/statistics/chart')) %>"
 );
